# etrobocon2022-camera-system

./: .gitignore  Makefile  README.md  mobile-hotspot.ps1  plan.sh  pyproject.toml  submit.ps1  submit.sh  tox.ini
.github/: issue_template.md  pull_request_template.md
CameraInterface/: CameraInterface.py  CheckConnectCamera.py  captureCameraInterface.ps1  captureCheckConnectCamera.ps1
camera/: __main__.py  camera_system.py  str_to_bool.py
camera_system/: __init__.py  __main__.py  block_selector.py  block_to_intersection.py  block_to_middle.py  camera_calibrator.py  camera_coordinate_calibrator.py  camera_interface.py  camera_system.py  client.py  color_changer.py  color_changer_backup.py  color_changer_original.py  composite_game_motion.py  coordinate.py  coordinate_getter.py  execute_color_changer.py  game_area_info.py  game_info.py  game_motion.py  game_motion_converter.py  game_motion_decider.py  game_planner.py  intersection_to_block.py  intersection_to_middle.py  middle_to_block.py  middle_to_intersection.py  middle_to_middle.py  motion_converter_mock.py  node.py  optimal_motion__searcher.py  optimal_motion_searcher.py  return_after_setup.py  return_to_block.py  return_to_intersection.py  return_to_middle.py  robot.py  str_to_bool.py  test.py  test.txt
tests/: __init__.py  test_block_selector.py  test_block_to_intersection.py  test_block_to_middle.py  test_camera_calibrator.py  test_camera_coordinate_calibrator.py  test_camera_system.py  test_client.py  test_color_changer.py  test_composite_game_motion.py  test_game_area_info.py  test_game_info.py  (+14 more)
(+38 files in other folders)
